made download working (although not yet fully tested)

--- a/HitomiScrollViewerWebApp/wwwroot/appsettings.json
+++ b/HitomiScrollViewerWebApp/wwwroot/appsettings.json
@@ -13,16 +13,17 @@
       }
     }
   },
-  "ApiUrl": "https://localhost:7076/",
-  "SearchConfigPath": "api/search-config/",
-  "BrowseConfigPath": "api/browse-config/",
-  "DownloadConfigPath": "api/download-config/",
-  "LanguageTypePath": "api/language-type/",
-  "TagFilterPath": "api/tag-filter/",
-  "SearchFilterPath": "api/search-filter/",
-  "TagPath": "api/tag/",
-  "GalleryPath": "api/gallery/",
-  "DbInitializeHubPath": "api/db-initialize-hub/",
-  "DownloadHubPath": "api/download-hub/",
-  "ImageFilePath": "api/image/"
+  "ApiUrl": "https://localhost:7076/api/",
+  "SearchConfigPath": "search-config/",
+  "BrowseConfigPath": "browse-config/",
+  "DownloadConfigPath": "download-config/",
+  "LanguageTypePath": "language-type/",
+  "TagFilterPath": "tag-filter/",
+  "SearchFilterPath": "search-filter/",
+  "TagPath": "tag/",
+  "GalleryPath": "gallery/",
+  "DownloadServicePath": "download-service/",
+  "DbInitializeHubPath": "db-initialize-hub/",
+  "DownloadHubPath": "download-hub/",
+  "ImageFilePath": "image/"
 }
