--- a/HitomiScrollViewerAPI/HitomiScrollViewerAPI.csproj
+++ b/HitomiScrollViewerAPI/HitomiScrollViewerAPI.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HitomiScrollViewerData\HitomiScrollViewerData.csproj" />
+    <ProjectReference Include="..\ConsoleUtilities\ConsoleUtilities.csproj" />
   </ItemGroup>
 
   <ItemGroup>
