--- a/HitomiScrollViewerAPI/appsettings.json
+++ b/HitomiScrollViewerAPI/appsettings.json
@@ -14,6 +14,6 @@
   },
   "AllowedHosts": "*",
   "WebAppUrl": "https://localhost:5214",
-  "HitomiServerInfoDomain": "ltn.gold-usergeneratedcontent.net",
-  "HitomiMainDomain": "hitomi.la"
+  "HitomiServerDomain": "gold-usergeneratedcontent.net",
+  "HitomiClientDomain": "hitomi.la"
 }
