implemented basic GalleryViewPage structure and created ViewConfiguration

--- a/HitomiScrollViewerWebApp/wwwroot/appsettings.json
+++ b/HitomiScrollViewerWebApp/wwwroot/appsettings.json
@@ -17,6 +17,7 @@
   "SearchConfigPath": "search-config/",
   "BrowseConfigPath": "browse-config/",
   "DownloadConfigPath": "download-config/",
+  "ViewConfigPath": "view-config/",
   "LanguageTypePath": "language-type/",
   "TagFilterPath": "tag-filter/",
   "SearchFilterPath": "search-filter/",
