--- a/HitomiScrollViewerData/HitomiScrollViewerData.csproj
+++ b/HitomiScrollViewerData/HitomiScrollViewerData.csproj
@@ -18,4 +18,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.2" />
     <PackageReference Include="System.Text.Json" Version="9.0.2" />
   </ItemGroup>
+
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\MudBlazor\src\MudBlazor\MudBlazor.csproj" />
+	</ItemGroup>
 </Project>
