added AppConfiguration and first app launch guidethrough

--- a/HitomiScrollViewerWebApp/wwwroot/appsettings.json
+++ b/HitomiScrollViewerWebApp/wwwroot/appsettings.json
@@ -18,6 +18,7 @@
   "BrowseConfigPath": "browse-config/",
   "DownloadConfigPath": "download-config/",
   "ViewConfigPath": "view-config/",
+  "AppConfigPath": "app-config/",
   "LanguageTypePath": "language-type/",
   "TagFilterPath": "tag-filter/",
   "SearchFilterPath": "search-filter/",
