implemented About page

--- a/HitomiScrollViewerWebApp/wwwroot/appsettings.json
+++ b/HitomiScrollViewerWebApp/wwwroot/appsettings.json
@@ -13,6 +13,9 @@
       }
     }
   },
+  "Developer": "kaismic",
+  "ApplicationName": "Hitomi Scroll Viewer",
+  "RepositoryName": "Hitomi-Scroll-Viewer",
   "ApiUrl": "https://localhost:7076/api/",
   "SearchConfigPath": "search-config/",
   "BrowseConfigPath": "browse-config/",
