reverted AboutPage and implemented auto update checking

--- a/HitomiScrollViewerWebApp/wwwroot/appsettings.json
+++ b/HitomiScrollViewerWebApp/wwwroot/appsettings.json
@@ -30,5 +30,6 @@
   "DownloadServicePath": "download-service/",
   "DbInitializeHubPath": "db-initialize-hub/",
   "DownloadHubPath": "download-hub/",
-  "ImageFilePath": "image/"
+  "ImageFilePath": "image/",
+  "UpdateCheckInterval": 14
 }
