moved download continue logic to API side

--- a/HitomiScrollViewerWebApp/wwwroot/appsettings.json
+++ b/HitomiScrollViewerWebApp/wwwroot/appsettings.json
@@ -31,5 +31,5 @@
   "DbInitializeHubPath": "db-initialize-hub/",
   "DownloadHubPath": "download-hub/",
   "ImageFilePath": "image/",
-  "UpdateCheckInterval": 14
+  "UpdateCheckInterval": 14 // days
 }
