--- a/HitomiScrollViewerWebApp/HitomiScrollViewerWebApp.csproj
+++ b/HitomiScrollViewerWebApp/HitomiScrollViewerWebApp.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="BlazorPro.BlazorSize" Version="9.0.0" />
+    <PackageReference Include="CodeBeam.MudBlazor.Extensions" Version="8.2.0" />
     <PackageReference Include="Flurl" Version="4.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.2" PrivateAssets="all" />
